# librebridge

./: .gitmodules  Cargo.toml  README.md
contracts/: remappings.txt
contracts/src/: ERC20Deposit.sol  ERC20LockMintIncoming.sol  ERC20LockMintOutgoing.sol  IAppContract.sol  LBMintableERC20.sol  LibreBridgeCore.sol  LibreBridgeLib.sol
prover-provider/: Cargo.toml
prover-sdk/: Cargo.toml
verifiers/bsc/: Cargo.toml
verifiers/bsc/src/: extradata.rs  lib.rs  verifier.rs
verifiers/core/: Cargo.toml
verifiers/core/src/: block.rs  lib.rs  verifier.rs
verifiers/core/testdata/: blocks.jsons  blocks.sh
verifiers/cosmos/: Cargo.toml
verifiers/ethereum/: Cargo.toml
verifiers/polygon/: Cargo.toml
