[workspace]
resolver = "2"

members = [
  "prover-provider",
  "prover-sdk",
  "verifiers/bsc",
  "verifiers/core",
  "verifiers/cosmos",
  "verifiers/ethereum",
  "verifiers/polygon",
]

[workspace.dependencies]
alloy = "0.1.4"
anyhow = "1.0.86"
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.3"
