[workspace]
resolver = "2"

members = [
  "prover-provider",
  "prover-sdk",
  "verifiers/bsc",
  "verifiers/core",
  "verifiers/cosmos",
  "verifiers/ethereum",
  "verifiers/polygon",
]

[workspace.dependencies]
alloy = "0.1.4"
alloy-rlp = "0.3.7"

anyhow = { version = "1.0.86", features = ["backtrace"] }
serde_json = "1.0.120"
log = "0.4.22"
env_logger = "0.11.3"
hex = "0.4.3"
