[package]
name = "librebridge-verifier-core"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true, features = ["consensus"] }
anyhow.workspace = true
log.workspace = true

[dev-dependencies]
env_logger.workspace = true
serde_json.workspace = true

[features]
default = ["rpc-type"]
rpc-type = ["alloy/rpc-types"]
